# 42-python-for-data-science

./: .gitignore  README.md  about-python-for-data-science.md
00-starting/: README.md  pyproject.toml
00-starting/ex00/: Hello.py
00-starting/ex01/: format_ft_time.py
00-starting/ex02/: find_ft_type.py
00-starting/ex03/: NULL_not_found.py  tester.py
00-starting/ex04/: whatis.py
00-starting/ex05/: building.py
00-starting/ex06/: filterstring.py  ft_filter.py
00-starting/ex07/: sos.py
00-starting/ex08/: Loading.py  tester.py
00-starting/ex09/: README.md  pyproject.toml
00-starting/ex09/ft_package/: __init__.py  count.py  hello.py
00-starting/ex09/tests/: test_count.py  test_hello.py  test_importing_modules.py
01-array/: README.md  pyproject.toml
01-array/ex00/: give_bmi.py  tester.py
01-array/ex01/: array2D.py  tester.py
01-array/ex02/: tester.py
01-array/ex03/: load_image.py  tester.py
