[tool.poetry]
name = "ft-package"
version = "0.1.0"
description = "My first python package"
homepage = "https://github.com/Honeybeei"
authors = ["seoyoo"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
